# cheatgooglecal

./: .envrc  .gitignore  flake.nix  pyproject.toml
cheatgooglecal/: __init__.py  cli.py  extract.py  fetch.py
