[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
authors = [
    {name = "Roberto Abdelkader Martínez Pérez", email = "robertomartinezp@gmail.com"},
]
license = {text = "MIT"}
requires-python = "<4.0,>=3.11"
dependencies = [
    "pycookiecheat<1.0.0,>=0.8.0",
    "requests<3.0.0,>=2.31.0",
    "icalendar<6.0.0,>=5.0.11",
    "recurring-ical-events<3.0.0,>=2.1.2",
    "unidecode<2.0.0,>=1.3.8",
    "x-wr-timezone<1.0.0,>=0.0.6",
]
name = "cheatgooglecal"
version = "0.1.0"
description = ""
readme = "README.md"

[project.scripts]
cheatgooglecal = "cheatgooglecal.cli:main"
